// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`modules/manager/helmv3/extract extractPackageFile() extract correctly oci references 1`] = `
{
  "datasource": "helm",
  "deps": [
    {
      "currentValue": "0.1.0",
      "datasource": "docker",
      "depName": "library",
      "packageName": "ghcr.io/ankitabhopatkar13/library",
    },
    {
      "currentValue": "0.8.1",
      "depName": "postgresql",
      "registryUrls": [
        "https://charts.helm.sh/stable",
      ],
    },
  ],
  "packageFileVersion": "0.1.0",
}
`;

exports[`modules/manager/helmv3/extract extractPackageFile() parses simple Chart.yaml correctly 1`] = `
{
  "datasource": "helm",
  "deps": [
    {
      "currentValue": "0.9.0",
      "depName": "redis",
      "registryUrls": [
        "https://charts.helm.sh/stable",
      ],
    },
    {
      "currentValue": "0.8.1",
      "depName": "postgresql",
      "registryUrls": [
        "https://charts.helm.sh/stable",
      ],
    },
  ],
  "packageFileVersion": "0.1.0",
}
`;

exports[`modules/manager/helmv3/extract extractPackageFile() resolves aliased registry urls 1`] = `
{
  "datasource": "helm",
  "deps": [
    {
      "currentValue": "0.9.0",
      "depName": "redis",
      "registryUrls": [
        "https://my-registry.gcr.io/",
      ],
    },
    {
      "currentValue": "1.0.0",
      "depName": "example",
      "registryUrls": [
        "https://registry.example.com/",
      ],
    },
    {
      "currentValue": "2.2.0",
      "datasource": "docker",
      "depName": "oci-example",
      "packageName": "quay.example.com/organization/oci-example",
    },
  ],
  "packageFileVersion": "0.1.0",
}
`;

exports[`modules/manager/helmv3/extract extractPackageFile() skips invalid registry urls 1`] = `
{
  "datasource": "helm",
  "deps": [
    {
      "currentValue": "0.9.0",
      "depName": "redis",
      "skipReason": "placeholder-url",
    },
    {
      "currentValue": "0.8.1",
      "depName": "postgresql",
      "skipReason": "invalid-url",
    },
    {
      "currentValue": "0.8.1",
      "depName": "broken",
      "skipReason": "no-repository",
    },
  ],
  "packageFileVersion": "0.1.0",
}
`;

exports[`modules/manager/helmv3/extract extractPackageFile() skips local dependencies 1`] = `
{
  "datasource": "helm",
  "deps": [
    {
      "currentValue": "0.9.0",
      "depName": "redis",
      "registryUrls": [
        "https://charts.helm.sh/stable",
      ],
    },
    {
      "currentValue": "0.8.1",
      "depName": "postgresql",
      "skipReason": "local-dependency",
    },
  ],
  "packageFileVersion": "0.1.0",
}
`;
